--- a/Day-07/SpringDataJpa-EntityMapping-Practice/src/main/resources/application.properties
+++ b/Day-07/SpringDataJpa-EntityMapping-Practice/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=SpringDataJpa-EntityMapping-Practice
+
+
+# Database connection properties
+spring.datasource.url=jdbc:mysql://localhost:3306/EntityMapping
+spring.datasource.username=root
+spring.datasource.password=5269
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
